# xbot

./: CLAUDE.md  Dockerfile  NOTICE  README.md  bot_core.py.bak  bot_core_legacy.py  bot_status.json  docker-compose.yml  download_plugin.js  entrypoint.sh  main.py  main.spec  main_config.template.toml  main_config.toml  package-lock.json  pyproject.toml  redis.conf  requirements.txt  version.json
.github/workflows/: docker-build-on-commit.yml
WechatAPI/: CLAUDE.md  INDEX.md  __init__.py
WechatAPI/Client/: INDEX.md  __init__.py  base.py  login.py  login_stat.json  message.py  tool.py
WechatAPI/Client869/: INDEX.md  __init__.py  client.py
WechatAPI/Server/: WechatAPIServer.py
adapter/: CLAUDE.md  INDEX.md  base.py  loader.py
adapter/qq/: README.md  __init__.py  config.toml  qq_adapter.py
adapter/tg/: README.md  __init__.py  config.toml  telegram_adapter.py
adapter/web/: README.md  __init__.py  config.toml  web_adapter.py
adapter/win/: README.md  __init__.py  config.toml  win_adapter.py
adapter/wx/: INDEX.md  README.md  __init__.py  config.toml  wx_adapter.py
admin/: admin_server_status.txt  bot_instance_status.txt  config.json  restart_helper.py  restart_record.json  server.py  system_stats_api.py
admin/_cache/: client_id  plugin_market.json
admin/cache/friend_circle/: self_0.json
admin/static/: direct-terminal.html
admin/static/js/: plugin_market.js
admin/templates/: about.html  accounts.html  base.html  contacts.html  file-manager.html  files.html  files_integrated.html  friend_circle.html  index.html  login.html  plugin_market.html  plugins.html  qrcode.html  reminders.html  system.html  terminal.html
bot_core/: CLAUDE.md  INDEX.md  __init__.py  client_initializer.py  login_handler.py  message_listener.py  orchestrator.py  service_initializer.py  status_manager.py  ws_message_normalizer.py
database/: CLAUDE.md
docs/: API_DOCUMENTATION_GUIDE.md  API文档.md  docker本地构建.md  multi-platform-adapter.md  webchat功能说明.md  插件列表.md  插件开发指南.md  用户手册.md  系统架构文档.md  配置指南.md
plugins/: CLAUDE.md  INDEX.md  README.md
plugins/BotStatus/: config.toml  main.py
plugins/DependencyManager/: INDEX.md  README.md  config.toml  main.py  plugin_market_cache.json
plugins/FileDownloader(bot下载文件示例)/: config.toml
plugins/ManagePlugin/: README.md  config.toml  main.py
plugins/Reminder/: config.toml
plugins/RevokeBotMessage/: INDEX.md  README.md  __init__.py  config.toml  main.py
tools/: route_audit.py
utils/: CLAUDE.md  INDEX.md  auto_restart.py  bot_status.py  config_manager.py  decorators.py  event_manager.py  exceptions.py  files_cleanup.py  framework_actions.py  github_proxy.py  logger_manager.py  login_cache.py  message_normalizer.py  message_queue_manager.py  message_receiver.py  mq_message_parser.py  notification_service.py  performance_monitor.py  plugin_base.py  plugin_manager.py  protocol_config.py  reply_router.py  xybot_legacy.py
utils/xybot/: INDEX.md  __init__.py  contact_manager.py  core.py  friend_circle.py  message_router.py  permission_checker.py  profile_manager.py  wakeup_checker.py
utils/xybot/message_handlers/: __init__.py
